# libdecnumber

./: .gitignore  Makefile.in  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  libdecnumber-3.68.pc.in
